# bazel-blog

./: .gitignore  2018-03-27-Introducing-Bazel-Cquery.md  2021-11-17-Remembering-Jon-Gerrish.md  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  _config.yml  archive.html  feed.xml  index.html  search.html
_includes/: blog-sidebar.html  byline.html  footer-content.html  footer.html  head.html  header.html
_layouts/: blog.html  posts.html
_posts/: 12-06-2022-Bazel-release-6.0-blog.md  2015-03-27-Hello-World.md  2015-04-06-Simplified-Workspace-Creation.md  2015-04-10-bash-completion.md  2015-04-15-share-your-project.md  2015-04-22-thank-you-stickers.md  2015-06-17-visualize-your-build.md  2015-06-25-ErrorProne.md  2015-07-01-Configuration-File.md  2015-07-08-Java-Configuration.md  2015-07-23-tree-trimming.md  2015-07-28-docker_build.md  2015-07-29-dashboard-dogfood.md  2015-09-01-beta-release.md  2015-09-11-sandboxing.md  2015-12-10-java-workers.md  2015-3-27-Hello-World.md  2016-01-27-continuous-integration.md  2016-02-23-0.2.0-release.md  2016-03-18-sandbox-easier-debug.md  2016-03-31-autoconfiguration.md  2016-06-10-0.3.0-release.md  2016-06-10-ide-support.md  2016-10-07-bazel-windows.md  2016-10-20-intellij-support.md  2016-11-02-0.4.0-release.md  2016-11-04-bazel-build.md  2017-02-22-repository-invalidation.md  2017-02-27-protocol-buffers.md  2017-02-28-google-summer-of-code.md  2017-03-07-java-sandwich.md  2017-03-21-design-of-skylark.md  2017-04-21-JDK7-deprecation.md  2017-05-26-Bazel-0-5-0-release.md  2017-05-31-google-summer-of-code-2017.md  (+177 more)
(+12 files in other folders)
