module(name = "build_bazel_blog")

bazel_dep(name = "rules_pkg", version = "1.0.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "bazel_website",
  urls = [
    "https://github.com/bazelbuild/bazel-website/archive/c174fa288aa079b68416d2ce2cc97268fa172f42.tar.gz"
  ],
  sha256 = "a5f531dd1d62e6947dcfc279656ffc2fdf6f447c163914c5eabf7961b4cb6eb4",
  strip_prefix = "bazel-website-c174fa288aa079b68416d2ce2cc97268fa172f42",
  # TODO(https://github.com/bazelbuild/bazel/issues/10793)
  # - Export files from bazel-website's BUILD, instead of doing it here.
  # - Share more common stylesheets, like footer and navbar.
  build_file_content = """
exports_files([\"_sass/style.scss\"])
""",
)
